fixed span overflow and white space

--- a/css/main.css
+++ b/css/main.css
@@ -60,3 +60,9 @@ button:hover, input:hover {
     padding: 10px;
     margin: 10px;
 }
+
+span {
+    max-width: auto;
+    white-space: normal;
+    overflow: hidden;
+}
